--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.18.2"
   }
 }
